# strava-analytics

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: Home.py  __init__.py  main.py
app/auth/: __init__.py  strava_oauth.py
app/components/: __init__.py  activity_map.py  charts.py  metrics_cards.py  sidebar.py
app/pages/: 1_Dashboard.py  1_🏠_Dashboard.py  2_Activity_History.py  3_Running_Analytics.py  3_Training_Analytics.py  4_Bike_Analytics.py  5_Settings.py  5_Weight_Training_Analytics.py  5_⚙️_Settings.py  __init__.py
config/: __init__.py  settings.py
docs/: CONVERSATION_TRANSCRIPT.md  DEPLOYMENT_SESSION_2.md  SESSION_SUMMARY.md
models/: __init__.py
models/database/: __init__.py  activity.py  activity_stream.py  athlete.py  base.py  oauth_token.py  sync_metadata.py  training_load.py  training_zone.py
models/ml/: __init__.py  activity_clustering.py  base_model.py  performance_predictor.py  training_load_optimizer.py
notebooks/: README.md
scripts/: init_db.py  init_postgres.sql  migrate_sqlite_to_postgres.py  train_models.py
utils/: __init__.py  feature_engineering.py  logger.py  strava_client.py  sync_manager.py  training_metrics.py
